# lzsslib

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  python-package.yml  test.yml
src/lzsslib/: __init__.py  compress.py  decompress.py  windowed_buffer.py
tests/: test_windowed_buffer.py
