[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lzsslib"
description = "A library for inflating and deflating LZSS (Lempel, Ziv, Storer, Szymanski) buffers."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
maintainers = [{name = "Antonio Vázquez", email = "antoniovazquezblanco@gmail.com"}]
authors = [{name = "Antonio Vázquez", email = "antoniovazquezblanco@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dependencies = [
    "bitstring>=4.0.1",
]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/antoniovazquezblanco/lzsslib/"
"Issue Tracker" = "https://github.com/antoniovazquezblanco/lzsslib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lzsslib"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["lzsslib", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
